--- a/src/components/Layout/Sidebar/Sidebar.module.css
+++ b/src/components/Layout/Sidebar/Sidebar.module.css
@@ -19,3 +19,9 @@
   background-color: #0088cc;
   padding: 8px 16px;
 }
+.header {
+  width: 100%;
+  background-color: #0088cc;
+  padding: 8px 16px;
+  margin-bottom: auto;
+}
