--- a/src/components/Chats/ChatRoom/ChatRoom.module.css
+++ b/src/components/Chats/ChatRoom/ChatRoom.module.css
@@ -4,6 +4,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 .textInput {
   display: flex;
@@ -13,7 +14,6 @@
   margin-top: auto;
   background-color: #252525;
   height: fit-content;
-  min-height: 30px;
   border-top: 1px solid rgb(190, 190, 190, 0.1);
 }
 .input {
