--- a/src/components/Layout/Sidebar/Sidebar.module.css
+++ b/src/components/Layout/Sidebar/Sidebar.module.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   color: #fff;
   box-shadow: 0 -5px 0px -5px rgba(54, 54, 54, 0.486);
@@ -24,4 +24,16 @@
   background-color: #0088cc;
   padding: 8px 16px;
   margin-bottom: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.sidebar-user {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sidebar-user-name {
+  margin-left: 8px;
 }
