--- a/src/components/Ui/Button/Button.module.css
+++ b/src/components/Ui/Button/Button.module.css
@@ -1,18 +1,19 @@
 .button {
   font: inherit;
-  border: 1px solid #0088cc;
-  background: #0088cc;
+  border: 1px solid #333333;
+  background: #333333;
   color: white;
   padding: 8px 16px;
   cursor: pointer;
   font-size: 1.15rem;
   border-radius: 30px;
+  line-height: 1;
 }
 
 .button:hover,
 .button:active {
-  background: #0088cc9a;
-  border-color: #0088cc9a;
+  background: #333333da;
+  border-color: #333333da;
 }
 
 .button:focus {
