--- a/src/components/Ui/Input/Input.module.css
+++ b/src/components/Ui/Input/Input.module.css
@@ -7,16 +7,11 @@
   height: fit-content;
   min-height: 30px;
   border: 1px solid rgb(0, 160, 189);
+  border-radius: 8px;
   color: #000;
   width: 100%;
   height: 45px;
 }
-
-/* .input > .form {
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-} */
 
 .input > input {
   width: 100%;
