show chats and select chat and find a user to chat

--- a/src/components/Layout/Sidebar/Sidebar.module.css
+++ b/src/components/Layout/Sidebar/Sidebar.module.css
@@ -37,3 +37,11 @@
 .sidebar-user-name {
   margin-left: 8px;
 }
+
+.foundedChat {
+  width: 100%;
+  background-color: #0088cccb;
+  border-end-end-radius: 8px;
+  border-end-start-radius: 8px;
+  cursor: pointer;
+}
