--- a/src/components/Chats/ChatItem/ChatItem.module.css
+++ b/src/components/Chats/ChatItem/ChatItem.module.css
@@ -6,6 +6,7 @@
   border-bottom: 1px solid rgba(54, 54, 54, 0.514);
   color: #fff;
   padding: 8px 16px;
+  cursor: pointer;
 }
 .chat-item__details {
   display: flex;
