--- a/src/components/Chats/ChatItem/ChatItem.module.css
+++ b/src/components/Chats/ChatItem/ChatItem.module.css
@@ -13,6 +13,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  margin-right: auto;
+  margin-left: 8px;
 }
 .chat-item__user-name {
   font-size: 15px;
